Add APIs (#40)
